--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ build/
 !**/src/test/**/build/
 
 **/src/main/resources/application-secrets.properties
+**/src/main/resources/application.yml
 
 ### STS ###
 .apt_generated
